WCM-538 SF - fix imports